--- a/templates/test.html
+++ b/templates/test.html
@@ -1,111 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load staticfiles %}
 <head>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-    <div>
-        <form action="query" method="post">
-            {% csrf_token %}
-            <table>
-                {% for  e_c_p, e_c_p_v in cutter_param_value.items %}
-                    <tr class="cutter">
-                        <td class="cutterParamTd">
-                            <strong>{{ e_c_p }}: </strong><input type="search" class="cutterParam" />
-                        </td>
-                        <td class="cutterParamValueTd" hidden>
-                            <table border=10 frame="box">
-                                {% for e_v in e_c_p_v %}
-                                    <tr class="cutterParamValue">
-                                        <td>{{ e_v }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </table>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
-            <select name="cutterSelection">
-                {% for e_c_n in cutter_names %}
-                    <option id="{{ e_c_n }}">{{ e_c_n }}</option>
-                {% endfor %}
-            </select>
-            <input type="submit" value="查询" name="selected"/>
-        </form>
-    </div>
-    {% comment %}
-{% if cutterSelection %}
-    <p>{{ cutterSelection }}</p>
-    <ul>
-    {% for e_f, e_v in res %}
-        <li><strong>{{ e_f }}: {{ e_v }}</strong></li>
-    {% endfor %}
-    </ul>
-{% else %}
-{% endif %}
-{% endcomment %}
-{% comment %}
-    <table frame='above' border="10">
+    <table>
+        <!--机床查询&结果显示行-->
         <tr>
-            {% for e_f in fields %}
-                <th>{{ e_f }}</th>
-            {% endfor %}
+            <td>
+                <h1>机床查询</h1>
+                <form action="query" method="post" id="machineToolQueryFrom" class="queryFrom" hidden="1">
+                {% csrf_token %}
+                    <table id="machineToolQueryTable" class="queryTable">
+                        {% for param, ref_val in machine_tool %}
+                            <tr class="searchRow">
+                                <td><em>{{ param }}</em></td>
+                                <td><input type="search" name={{ param }}/></td>
+                                <td>
+                                    <ul class="refUl" hidden="1">
+                                        {% for e_r in ref_val %}
+                                            <li><input type="checkbox" value={{ e_r }}/>{{ e_r }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                            <tr>
+                                <input type="submit" name="machine_tool_query_submit" value="机床查询"/>
+                            </tr>
+                    </table>
+                </form>
+            </td>
+        {% if machine_tool_query_result %}
+            <td>
+
+            </td>
+        {% endif %}
         </tr>
-        {% for e_r in lines %}
-            <tr>
-            {% for e_v in e_r %}
-                <td>{{ e_v }}</td>
-            {% endfor %}
-            </tr>
-        {% endfor %}
+        <!--机床查询&结果显示行-->
+        <tr>
+            <td>
+                <h1>刀具查询</h1>
+                <form action="query" method="post" id="cutterQueryFrom" class="queryFrom" hidden="1">
+                {% csrf_token %}
+                    <table id="cutterQueryTable">
+                        {% for param, ref_val in cutter %}
+                            <tr class="searchRow">
+                                <td><em>{{ param }}</em></td>
+                                <td><input type="search" name={{ param }}/></td>
+                                <td>
+                                    <ul class="refUl" hidden="1">
+                                        {% for e_r in ref_val %}
+                                            <li><input type="checkbox" value={{ e_r }}/>{{ e_r }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                            <tr>
+                                <input type="submit" name="cutter_query_submit" value="刀具查询"/>
+                            </tr>
+                    </table>
+                </form>
+            </td>
+        {% if cutter_query_result %}
+            <td>
+
+            </td>
+        {% endif %}
+        </tr>
     </table>
-{% endcomment %}
 </body>
-<script>
-    var selectedOption = document.getElementById("{{ cutterSelection }}");
-    if (selectedOption != null) {
-        selectedOption.setAttribute('selected', '1');
-    }
-    function showOrHide(e) {
-        var target = e.target;
-        var p = target.parentNode.parentNode;
-        if (p.hasChildNodes()) {
-            var children = p.childNodes;
-            if (children.length > 0) {
-                for (var i = 0; i < children.length; ++i) {
-                    if (children[i].className == 'cutterParamValueTd') {
-                        switch (e.type) {
-                            case 'focus':
-                                children[i].removeAttribute('hidden');
-                                break;
-                            case 'blur':
-                                children[i].setAttribute('hidden', '');
-                                break;
-                        }
-                        /*for (var j=0; j<tdChildren.length; j++) {
-                            if (tdChildren[j].className == 'cutterParamValue') {
-                                switch (e.type) {
-                                    case 'focus':
-                                        children[i].removeAttribute('hidden');
-                                        break;
-                                    case 'blur':
-                                        children[i].setAttribute('hidden', '');
-                                        break;
-                                }
-                            }
-                        }*/
+    <script src={% static 'jquery-1.12.2.js' %}></script>
+    <script>
+        $(function() {
+            //
+            $('h1').on('click', function(e) {
+                $(e.target).siblings('form').removeAttr('hidden');
+            });
+            var $curRow = NaN;
+            // 使用事件委托 委托给获得焦点的input元素的父级元素
+            $('.searchRow').on('click', function (e) {
+                $curTar = $(e.currentTarget);
+                $tar = $(e.target);
+                // another search; hide, show
+                if (!$curTar.is($curRow)) {
+                    if ($curRow) {
+                        $curRow.children(':has("ul")').children().attr('hidden', 1);
                     }
+                    if ($tar.attr('type') == 'search') {
+                        $tar.parent().parent().find('ul').removeAttr('hidden');
+                    }
+                    $curRow = $curTar;
                 }
-            }
-        }
-    }
-    var cutterParamInputs = document.getElementsByClassName('cutterParam');
-    if (cutterParamInputs.length > 0) {
-        for (var i=0; i<cutterParamInputs.length; i++) {
-            cutterParamInputs[i].addEventListener('focus',  showOrHide, false);
-            cutterParamInputs[i].addEventListener('blur', showOrHide, false);
-        }
-    }
-</script>
+            });
+            // 添加refUl的监听事件 事件委托 动态获得checkbox中的选择结果
+            $('.refUl').on('change', function (e) {
+                var $curTar = $(e.currentTarget);  // 发生change事件的refUl
+                var $selectedLi = $curTar.children().children(':checked');
+                var selectedLiText = '';
+                $selectedLi.each(function () {
+                    selectedLiText += $(this).attr('value');
+                });
+                $curTar.parent().parent().children().find('input[type="search"]').attr('value', selectedLiText);
+            })
+        })
+    </script>
 </html>
